upando pags de Contato e Membro- Emanuel

--- a/emanuel.html
+++ b/emanuel.html
@@ -8,13 +8,16 @@
 <body>
     <header>
         <h1>Emanuel Fontanha</h1>
-        <a href="#">Voltar à página principal</a>
+        <a href="./main.html">Voltar à página principal</a>
     </header>
 
     <main>
         <section>
             <h2>Foto bonita de um pobre dev</h2>
-            <img src="#" alt="Foto de um cara muito bonito">
+            <img
+                src="./assets/emanuel-profile-picture.jpg"
+                alt="Foto de um cara muito bonito"
+                style="width: 250px;">
         </section>
         <section>
             <h2>Apresentação de um pobre dev</h2>
@@ -60,17 +63,18 @@
                 placeholder="Feedback..."
                 cols="50"
                 rows="6"
+                style="resize: none;"
                 required></textarea> <br> <br>
             <button type="submit">ENVIAR</button>
         </form>
     </main>
 
     <footer>
-        <h2>Gostou? Entre em contato comigo!</h2>
+        <h2>Redes Sociais</h2>
         <div>
-            <a href="#">GitHub</a> <br>
-            <a href="#">LinkedIn</a> <br>
-            <a href="#">Página de Contato</a>
+            <a href="https://github.com/Emanuel-Fontanha" target="_blank">GitHub</a> <br>
+            <a href="https://www.linkedin.com/in/emanuel-fontanha/" target="_blank">LinkedIn</a> <br>
+            <a href="./emanuel-contato.html">Contato - Emanuel</a>
         </div>
     </footer>
 </body>
