correções de tag (div >> nav)

--- a/emanuel.html
+++ b/emanuel.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Emanuel Fontanha</h1>
+        <h1>Emanuel Fontanha, O Tico</h1>
         <a href="./main.html">Voltar à página principal</a>
     </header>
 
@@ -71,11 +71,11 @@
 
     <footer>
         <h2>Redes Sociais</h2>
-        <div>
+        <nav>
             <a href="https://github.com/Emanuel-Fontanha" target="_blank">GitHub</a> <br>
             <a href="https://www.linkedin.com/in/emanuel-fontanha/" target="_blank">LinkedIn</a> <br>
             <a href="./emanuel-contato.html">Contato - Emanuel</a>
-        </div>
+        </nav>
     </footer>
 </body>
 </html>
