--- a/emanuel-contato.html
+++ b/emanuel-contato.html
@@ -8,8 +8,10 @@
 <body>
     <header>
         <h1>Contato - Emanuel Fontanha</h1>
-        <a href="./main.html">Voltar à página principal</a> <br> <br>
-        <a href="./emanuel.html">Voltar à página do Emanuel</a>
+        <nav>
+            <a href="./main.html">Voltar à página principal</a> <br> <br>
+            <a href="./emanuel.html">Voltar à página do Emanuel</a>
+        </nav>
     </header>
 
     <main>
@@ -47,10 +49,10 @@
 
     <footer>
         <h2>Redes Sociais</h2>
-        <div>
+        <nav>
             <a href="https://github.com/Emanuel-Fontanha" target="_blank">GitHub</a> <br>
             <a href="https://www.linkedin.com/in/emanuel-fontanha/" target="_blank">LinkedIn</a> <br>
-        </div>
+        </nav>
     </footer>
 </body>
 </html>
