Adiciona página individual e página de contato do Pedro

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
             <!-- Quando preencherem, eu apago (ou o segundo de vcs que preencher msm) -->
             <a href="./emanuel.html">Página do Tico - Emanuel Fontanha</a> <br>
             <a href="#">Página do Teco - Paulo Vitor</a> <br>
-            <a href="#">Página do Tonho - Pedro Lucas</a>
+            <a href="./pedro.html">Página do Tonho - Pedro Lucas</a>
         </nav>
     </main>
 
