--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
             <!-- Deixem esse comentário aqui para os dois verem -->
             <!-- Quando preencherem, eu apago (ou o segundo de vcs que preencher msm) -->
             <a href="./emanuel.html">Página do Tico - Emanuel Fontanha</a> <br>
-            <a href="#">Página do Teco - Paulo Vitor</a> <br>
+            <a href="./paulo-victor.html">Página do Teco - Paulo Vitor</a> <br>
             <a href="./pedro.html">Página do Tonho - Pedro Lucas</a>
         </nav>
     </main>
