--- a/paulo-victor-contato.html
+++ b/paulo-victor-contato.html
@@ -9,8 +9,8 @@
     <header>
         <h1> Paulo Victor</h1>
         
-        <a href="">Página Principal</a>
-        <a href="PauloVictor.html">Voltar à página  individual do membro</a>
+        <a href="./main.html">Página Principal</a>
+        <a href="./paulo-victor.html">Voltar à página individual do membro</a>
 
     </header>
     <main>
@@ -32,7 +32,6 @@
     <footer>
         <a href="https://github.com/paulocoutinhodev"> Página do meu Github</a><br>
         <a href="https://www.linkedin.com/in/paulo-victor-coutinho-barbosa-4b2743248/">Página do meu linkedin</a><br>
-
     </footer>
 
 </body>
