--- a/paulo-victor.html
+++ b/paulo-victor.html
@@ -10,13 +10,12 @@
 <body>
     <header>
         <h1> Paulo Victor</h1>
-        <a href="#"> Volte a tela inicial</a>
+        <a href="./main.html"> Volte a tela inicial</a>
 
     </header>
 
     <main>
-        <h1> Paulo Victor</h1>
-        <img src="pv.foto.png">
+        <img src="./assets/pv.foto.png">
         <p> Meu nome é Paulo Victor, tenho 31 anos e sou formado em Licenciatura em Física, com conclusão em 2022.
             Atualmente, trabalho em um pré-vestibular do CEDERJ, onde acompanho e apoio alunos que estão se preparando
             para ingressar no ensino superior. No momento, estou cursando Computação pelo CEDERJ como uma nova etapa da
@@ -57,7 +56,7 @@
     <footer>
         <a href="https://github.com/paulocoutinhodev"> Página do meu Github</a><br>
         <a href="https://www.linkedin.com/in/paulo-victor-coutinho-barbosa-4b2743248/">Página do meu linkedin</a><br>
-        <a href="./pvcontato.html">Contato</a>
+        <a href="./paulo-victor-contato.html">Contato</a>
     </footer>
 </body>
 
