fiz algumas alterações finais e adicionei alguns vídeos

--- a/paulo-victor-contato.html
+++ b/paulo-victor-contato.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página de Contato</title>
 </head>
 <body>
     <header>
-        <h1> Paulo Victor</h1>
-        
-        <a href="./main.html">Página Principal</a>
-        <a href="./paulo-victor.html">Voltar à página individual do membro</a>
+        <nav>
+            <h1> Paulo Victor</h1>
+            <a href="./main.html">Página Principal</a>
+            <a href="./paulo-victor.html">Voltar à página individual do membro</a>
+        </nav>
 
     </header>
     <main>
-        <h2>Formulário</h2>
+        <h3>Formulário</h3>
         <form >
             <label for="Nome">Digite o seu nome</label><br>
             <input type="text" name="Nome" placeholder="Nome"> <br>
@@ -30,8 +31,11 @@
 
     </main>
     <footer>
-        <a href="https://github.com/paulocoutinhodev"> Página do meu Github</a><br>
-        <a href="https://www.linkedin.com/in/paulo-victor-coutinho-barbosa-4b2743248/">Página do meu linkedin</a><br>
+        <h3> Minhas Redes Sociais</h3>
+        <nav>
+        <a href="https://github.com/paulocoutinhodev"> Página do meu Github</a>
+        <a href="https://www.linkedin.com/in/paulo-victor-coutinho-barbosa-4b2743248/">Página do meu linkedin</a>
+        </nav>
     </footer>
 
 </body>
