--- a/main.html
+++ b/main.html
@@ -12,14 +12,10 @@
 
     <main>
         <h2>Descrição do grupo</h2>
-        <p>
-            Pra proteger o mundo de toda devastação. Pra unir todas as pessoas em nossa nação. Pra denunciar os males da verdade e do amor. Pra extender nosso poder às estrelas. Nós somos Emanuel, Paulo Vitor e Pedro Lucas, também conhecidos por Tico, Teco e Tonho. Equipe T3 decolando na velocidade da luz. Renda-se agora ou prepara-se para lutar!</p>
-
+        <p>Pra proteger o mundo de toda devastação. Pra unir todas as pessoas em nossa nação. Pra denunciar os males da verdade e do amor. Pra extender nosso poder às estrelas. Nós somos Emanuel, Paulo Vitor e Pedro Lucas, também conhecidos por Tico, Teco e Tonho. Equipe T3 decolando na velocidade da luz. Renda-se agora ou prepara-se para lutar!</p>
         <h2>Conheça a equipe T3</h2>
+        
         <nav>
-            <!-- GALERA, PREENCHAM OS LINKS COM O CAMINHO DOS SEUS ARQUIVOS, POR FAVOR -->
-            <!-- Deixem esse comentário aqui para os dois verem -->
-            <!-- Quando preencherem, eu apago (ou o segundo de vcs que preencher msm) -->
             <a href="./emanuel.html">Página do Tico - Emanuel Fontanha</a> <br>
             <a href="./paulo-victor.html">Página do Teco - Paulo Vitor</a> <br>
             <a href="./pedro.html">Página do Tonho - Pedro Lucas</a>
@@ -29,7 +25,7 @@
     <footer>
         <div>
             <h2>Nosso Slogan</h2>
-            <p># Slogan a decidir #</p>
+            <p>"Codificar é estar no extremo de si mesmo."</p>
         </div>
 
         <div>
