--- a/paulo-victor.html
+++ b/paulo-victor.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1> Paulo Victor</h1>
+        <h1> Paulo Victor, O Teco</h1>
         <a href="./main.html"> Volte a tela inicial</a>
 
     </header>
